# moni

back/: Cargo.toml
back/migrations/: 20260415151913_init_schema.sql
back/src/: handlers.rs  main.rs  models.rs  scraper.rs
front/: package-lock.json  package.json
front/src/: App.jsx  index.css
front/src/components/: StatCard.jsx  TransactionTable.jsx
